$NetBSD: CHANGES-2020,v 1.1490 2020/03/11 15:02:05 pho Exp $

Changes to the packages collection and infrastructure in 2020:

	Updated devel/p5-Date-Manip to 6.79 [mef 2020-01-01]
	Updated devel/p5-IO-Async to 0.75 [mef 2020-01-01]
	Updated devel/samurai to 1.0 [ng0 2020-01-01]
	Updated www/nsm to 1.25 [ng0 2020-01-01]
	Updated textproc/json-yaml to 1.2.1 [sjmulder 2020-01-01]
	Updated security/doas to 6.2p4 [ng0 2020-01-01]
	Updated devel/p5-B-Keywords to 1.21 [mef 2020-01-01]
	Updated devel/p5-EV to 4.31 [mef 2020-01-01]
	Updated security/sudo to 1.8.30 [kim 2020-01-01]
	Removed graphics/qiviewer [kamil 2020-01-01]
	Removed math/extcalc [kamil 2020-01-01]
	Added devel/hs-uuid-types version 1.0.3 [pho 2020-01-01]
	Updated devel/hs-stm to 2.5.0.0 [pho 2020-01-01]
	Added devel/hs-StateVar version 1.2 [pho 2020-01-01]
	Updated devel/p5-ExtUtils-MakeMaker to 7.42 [mef 2020-01-01]
	Added math/hs-contravariant version 1.5.2 [pho 2020-01-01]
	Updated devel/p5-Alien-Build to 1.94 [mef 2020-01-01]
	Updated devel/hs-vector to 0.12.0.3 [pho 2020-01-01]
	Updated converters/hs-aeson to 1.4.6.0 [pho 2020-01-01]
	Updated devel/hs-mtl to 2.2.2 [pho 2020-01-01]
	Updated devel/hs-cmdargs to 0.10.20 [pho 2020-01-01]
	Updated devel/p5-CPAN-Perl-Releases to 5.20191220 [mef 2020-01-01]
	Updated devel/p5-Compress-Raw-Bzip2 to 2.093 [mef 2020-01-01]
	Updated devel/p5-Compress-Raw-Zlib to 2.093 [mef 2020-01-01]
	Updated net/hs-network to 3.1.1.1 [pho 2020-01-01]
	Updated devel/hs-syb to 0.7.1 [pho 2020-01-01]
	Updated devel/hdevtools to 0.1.8.0 [pho 2020-01-01]
	Updated devel/hs-MonadRandom to 0.3nb1 [pho 2020-01-01]
	Added devel/hs-splitmix version 0.0.3 [pho 2020-01-01]
	Updated devel/hs-QuickCheck to 2.13.2 [pho 2020-01-01]
	Updated devel/p5-Glib-Object-Introspection to 0.048 [mef 2020-01-01]
	Updated devel/hs-exceptions to 0.10.4 [pho 2020-01-01]
	Updated devel/hs-mmorph to 1.1.3 [pho 2020-01-01]
	Updated devel/p5-Module-Compile to 0.38 [mef 2020-01-01]