@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2016/01/28 13:04:08 mef Exp $
-
-SHA1 (librest-0.6.tar.gz) = a1def4bcb0f5ac566cce1e25098b6cbdd59bf4f3
-RMD160 (librest-0.6.tar.gz) = 8091527ba1da4a435d3fd22b7885a6dd1c450202
-SHA512 (librest-0.6.tar.gz) = 693a0e34b9ea2fa9f16238b93694f7dc4813580304c444d5ad3cd17e2c47c09b5a42cb1eefbc2a5dabe2cac5d4dedaed4a39e2c01cc235a6de7a17751c4dde1d
-Size (librest-0.6.tar.gz) = 49370 bytes
